clusters/clusters/my-cluster/infrastructure/controllers/kyverno/policies/policies-labels.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-labels
spec:
  validationFailureAction: enforce
  rules:
    - name: check-for-labels
      match:
        resources:
          kinds:
            - Pod
      validate:
        message: "Labels 'app' and 'environment' is stop deploy"
        pattern:
          metadata:
            labels:
              app: "?*"
              environment: "?*"
